syntax = "proto3";

option go_package = "internal/transport/grpc/proto";

package proto;

service OrchestratorService {
  rpc GetTasks(stream TaskResult) returns (stream IncomingTask) {}
}

message TaskResult {
  string id = 1;
  float result = 2;
}

message IncomingTask {
  string id = 1;
  string arg1 = 2;
  string arg2 = 3;
  string operation = 4;
  uint64 operationTime = 5;
}
